Consome os webservices

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,4 +33,5 @@ project.dad_final-war=dad_final-war
 reference.dad_final-ejb.dist-ear=${project.dad_final-ejb}/dist/dad_final-ejb.jar
 reference.dad_final-war.dist-ear=${project.dad_final-war}/dist/dad_final-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
