--- a/dad_final-war/nbproject/project.properties
+++ b/dad_final-war/nbproject/project.properties
@@ -36,6 +36,17 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.asm-3.1.jar=../lib/asm-3.1.jar
+file.reference.commons-codec-1.6.jar=../lib/commons-codec-1.6.jar
+file.reference.commons-logging-1.1.3.jar=../lib/commons-logging-1.1.3.jar
+file.reference.fluent-hc-4.3.6.jar=../lib/fluent-hc-4.3.6.jar
+file.reference.httpclient-4.3.6.jar=../lib/httpclient-4.3.6.jar
+file.reference.httpclient-cache-4.3.6.jar=../lib/httpclient-cache-4.3.6.jar
+file.reference.httpcore-4.3.3.jar=../lib/httpcore-4.3.3.jar
+file.reference.httpmime-4.3.6.jar=../lib/httpmime-4.3.6.jar
+file.reference.jackson-all-1.9.0.jar=../lib/jackson-all-1.9.0.jar
+file.reference.jersey-bundle-1.18.jar=../lib/jersey-bundle-1.18.jar
+file.reference.jsr311-api-1.1.1.jar=../lib/jsr311-api-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +57,18 @@ j2ee.platform.wscompile.classpath=C:/Program Files/NetBeans 8.1/saaj-api.jar:C:/
 j2ee.server.type=JBoss4
 jar.compress=false
 javac.classpath=\
-    ${reference.dad_final-ejb.dist}
+    ${reference.dad_final-ejb.dist}:\
+    ${file.reference.asm-3.1.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.fluent-hc-4.3.6.jar}:\
+    ${file.reference.httpclient-4.3.6.jar}:\
+    ${file.reference.httpclient-cache-4.3.6.jar}:\
+    ${file.reference.httpcore-4.3.3.jar}:\
+    ${file.reference.httpmime-4.3.6.jar}:\
+    ${file.reference.jackson-all-1.9.0.jar}:\
+    ${file.reference.jersey-bundle-1.18.jar}:\
+    ${file.reference.jsr311-api-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
